[package]
name = "garble"
description = "Utilities to slightly modify data for fault injection"
version = "0.0.2"
edition = "2021"
authors = ["nicolas.moutschen@gmail.com"]
license = "MIT"
repository = "https://github.com/nmoutschen/garble"
readme = "../README.md"

[dependencies]
garble_derive = { version = "0.0.2", path = "../garble_derive", optional = true }
paste = "1.0"
rand = { version = "0.8", optional = true }

[features]
default = ["derive", "simple"]
derive = ["garble_derive"]
simple = ["rand"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]