[package]
name = "garble_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
garble = { version = "0.0.2", path = "../garble" }
garble_derive = { version = "0.0.2", path = "../garble_derive" }
paste = "1.0"